Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65627

Wrong Painting of QLineEdit's Clear Button

    XMLWordPrintable

Details

    • 05b8ba51550127c85cd2db5cb819b695b56c57ce

    Description

      In qlineedit_p.cpp -> QLineEditIconButton::paintEvent(), Qt sets the "clear" icon size to 32px when the line-edit height is greater than 34px. That's wrong because it ignores the fact that margins may not be the same in different style plugins – not all of them are like Fusion and, even with Fusion, it can result in a blurred icon when the font is big enough (see the attatched screenshot).

      In Qt4, we could add a nice clear tool-button in the code without this problem.

       

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              qt.team.quick.subscriptions Qt Quick and Widgets Team
              tsujan Tsu Jan
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes